# dagster-project

./: .gitignore  pyproject.toml
dagster_project/: assets.py
dbt_project/: .user.yml  dbt_project.yml
dbt_project/models/recent/: recent_new_users.sql
dbt_project/models/sources/: sources.yml
dbt_project/models/staging/events/: stg_new_user_events.sql
dbt_project/models/staging/state/: stg_users.sql
dlt_sources/: .gitignore  okta.py  rest_api_pipeline.py
models/: client.py  dlt_rest_config.py
