[project]
name = "dagster_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dlt (>=0.26.6,<0.27.0)",
    "s3fs (>=2025.3.0,<2026.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "duckdb (>=1.2.1,<2.0.0)",
    "sqlglot (>=26.11.1,<27.0.0)",
    "dagster-webserver (>=1.10.7,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_project.definitions"
code_location_name = "dagster_project"

[tool.setuptools.packages.find]
exclude=["dagster_project_tests"]
